...
    <string name="settings_check_update">檢查更新</string>
    <string name="settings_about_us">關於我們</string>
    <string name="settings_privacy_policy">隱私政策</string>
    <string name="settings_version_prefix">版本</string>
    <string name="about_description">BusIsComing 為香港巴士通勤而設，助你比較 Citybus 路線與實時到站時間，更好掌握出發時機。\n\n你亦可儲存常用行程、查看地圖詳情及啟用通知欄監察。</string>
    <string name="website_url">https://www.busiscoming.com</string>
    <string name="rating_play_disabled_title">Google Play 已停用</string>
    <string name="rating_play_disabled_message">如要前往 Google Play 評分，請先在系統設定啟用 Google Play。</string>
    <string name="rating_play_missing_title">找不到 Google Play</string>
    <string name="rating_play_missing_message">這部裝置未安裝 Google Play。你可以查看 Google 官方說明，了解如何尋找或恢復 Google Play。</string>
    <string name="rating_play_unusable_title">目前無法使用 Google Play</string>
    <string name="rating_play_unusable_message">目前無法確認 Google Play 可開啟商品頁。你可以查看 BusIsComing 的應用設定後再試。</string>
    <string name="rating_action_enable_play">前往啟用</string>
    <string name="rating_action_view_install_help">查看安裝說明</string>
    <string name="rating_action_app_settings">應用設定</string>
    <string name="rating_external_navigation_failed">暫時無法開啟所選頁面，請稍後再試。</string>
    <string name="update_status_never_checked">點按以檢查新版本</string>
    <string name="update_status_checking">正在檢查更新…</string>
    <string name="update_status_up_to_date">目前已是最新版本</string>
    <string name="update_status_available">有新版本 %1$s 可用</string>
    <string name="update_status_available_generic">有新版本可用</string>
...
    <string name="update_status_failed">檢查失敗，點按重試</string>
    <string name="update_status_unverified">暫時無法確認更新，點按重試</string>
    <string name="update_verification_failed_title">無法確認 Google Play 更新</string>
    <string name="update_debug_build_unsupported_message">目前偵錯版本無法驗證 Google Play 更新。請使用 Google Play 測試版本再試一次。</string>
    <string name="update_play_not_owned_message">暫時無法透過 Google Play 確認更新。你可以前往 Google Play 查看。</string>
    <string name="update_action_open_play">前往 Google Play</string>
    <string name="update_action_cancel">取消</string>
    <string name="update_prompt_title">發現新版本</string>
    <string name="update_prompt_version">版本 %1$s</string>
    <string name="update_prompt_message">新版本已可下載。你可以現在更新，或稍後再處理。</string>
    <string name="update_action_update">前往更新</string>
    <string name="update_action_later">稍後提醒</string>
    <string name="update_action_skip">略過此版本</string>
...
