<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingsRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_page_background"
    android:fillViewport="true">

    <LinearLayout
...
            <TextView
                style="@style/SettingsRowText"
                android:text="@string/settings_feedback" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingsRatingRow"
            style="@style/SettingsRow"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
...
