...
    <string name="route_map_csdi_attribution_line_two">© 香港特區政府</string>
    <string name="route_map_csdi_attribution_accessibility">地政總署 CSDI 步行資料署名，點按查看來源及免責說明</string>
    <string name="route_map_csdi_notice_title">步行資料來源</string>
    <string name="route_map_csdi_notice_message">步行距離、約略時間及軌跡來自香港特別行政區政府地政總署，並經 CSDI Portal 提供。資料按現狀提供；政府及相關機構不保證準確性、完整性、及時性或適用性，也不就使用、無法使用或依賴資料造成的損失承擔責任。\n\n來源：3D Pedestrian Route Search API\n條款：https://portal.csdi.gov.hk/csdi-webpage/doc/TNC</string>
    <string name="route_map_csdi_open_source">開啟來源</string>
    <string name="settings_auto_refresh">自動刷新</string>
    <string name="settings_auto_refresh_value_accessibility">自動刷新，目前為%1$s</string>
    <string name="auto_refresh_off">關閉</string>
    <string name="auto_refresh_one_minute">1 分鐘</string>
    <string name="auto_refresh_two_minutes">2 分鐘</string>
    <string name="auto_refresh_five_minutes">5 分鐘</string>
    <string name="auto_refresh_ten_minutes">10 分鐘</string>
    <string name="auto_refresh_selected">已選中</string>
    <string name="auto_refresh_not_selected">未選中</string>
    <string name="auto_refresh_updating">正在更新</string>
    <string name="auto_refresh_notice_title">自動刷新已開啟</string>
    <string name="auto_refresh_notice_interval">每 %1$s自動更新</string>
    <string name="auto_refresh_notice_settings">設定</string>
...
